Modified META description.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Karol Chlasta - IT manager for a leading insurance, pensions, and fund management business. PhD student in CS at PJIIT/SWPS University."
+      content="Karol Chlasta - PhD student in CS at PJAIT/SWPS University. IT manager for a leading insurance, pensions, and fund management business. Living in Warsaw, Poland."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
